# eng-checkers

./: .gitignore  CMakeLists.txt  README.md
lib/: sfml-audio.lib  sfml-graphics.lib  sfml-main.lib  sfml-network.lib  sfml-system.lib  sfml-window.lib
src/: AI.cpp  AI.hpp  Board.cpp  Board.hpp  Move.hpp  main.cpp
